uploader for dish

--- a/app/views/dishes/_form.html.erb
+++ b/app/views/dishes/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :image_code %><br>
-    <%= f.text_field :image_code %>
+    <%= f.file_field :image_code %>
   </div>
   <div class="field">
     <%= f.label :restaurant_id %><br>
