- Add dish and meal uploader - Fix price does not save to db issue

--- a/app/views/dishes/_form.html.erb
+++ b/app/views/dishes/_form.html.erb
@@ -20,6 +20,10 @@
     <%= f.file_field :image_code %>
   </div>
   <div class="field">
+    <%= f.label :price %><br>
+    <%= f.text_field :price %>
+  </div>
+  <div class="field">
     <%= f.label :restaurant_id %><br>
     <%= f.text_field :restaurant_id %>
   </div>
