--- a/app/views/dishes/show.html.erb
+++ b/app/views/dishes/show.html.erb
@@ -6,6 +6,11 @@
 </p>
 
 <p>
+  <strong>Price:</strong>
+  <%= @dish.price %>
+</p>
+
+<p>
   <strong>Image code:</strong>
   <%= @dish.image_code %>
 </p>
