--- a/app/views/meals/show.html.erb
+++ b/app/views/meals/show.html.erb
@@ -24,7 +24,10 @@
   <strong>Dish:</strong>
   <%= @meal.dish_id %>
 </p>
-
+<p>
+  <strong>Price:</strong>
+  <%= @meal.price %>
+</p>
 <p>
   <strong>Meal date:</strong>
   <%= @meal.meal_date %>
