--- a/app/views/meals/index.html.erb
+++ b/app/views/meals/index.html.erb
@@ -8,6 +8,7 @@
       <th>Dish image code</th>
       <th>Dish name</th>
       <th>Dish</th>
+      <th>Price</th>
       <th>Meal date</th>
       <th>Restaurant name</th>
       <th>Restaurant image code</th>
@@ -26,6 +27,7 @@
         <td><%= meal.dish_image_code %></td>
         <td><%= meal.dish_name %></td>
         <td><%= meal.dish_id %></td>
+        <td><%= meal.price %></td>
         <td><%= meal.meal_date %></td>
         <td><%= meal.restaurant_name %></td>
         <td><%= meal.restaurant_image_code %></td>
