--- a/app/views/dishes/show.html.erb
+++ b/app/views/dishes/show.html.erb
@@ -21,5 +21,10 @@
   <%= @dish.restaurant_id %>
 </p>
 
+<p>
+  <strong>Restaurant Name:</strong>
+  <%= @dish.restaurant_name %>
+</p>
+
 <%= link_to 'Edit', edit_dish_path(@dish) %> |
 <%= link_to 'Back', dishes_path %>
