Link restaurant to dish

--- a/app/views/dishes/_form.html.erb
+++ b/app/views/dishes/_form.html.erb
@@ -5,7 +5,7 @@
     <%= f.input :name %>
     <%= f.input :image_code, :as => :file %>
     <%= f.input :price %>
-    <%= f.input :restaurant_id %>
+    <%= f.input :restaurant_name %>
     
     <div class="form-actions">
       <%= f.submit nil, :class => 'btn btn-primary' %> or
